--- a/1-SignalRChat/1-SignalRChat.csproj
+++ b/1-SignalRChat/1-SignalRChat.csproj
@@ -99,6 +99,7 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
+    <Content Include="transports.log.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
